--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Mdhofm/the-quote-card-express/issues"
   },
-  "homepage": "https://github.com/Mdhofm/the-quote-card-express#readme"
+  "homepage": "https://github.com/Mdhofm/the-quote-card-express#readme",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
